ParsedContentType refactoring

This is a preliminary refactoring for fixing compatibility issues of
ParsedContentType.

BUG=689731

Review-Url: https://codereview.chromium.org/2704153002
Cr-Commit-Position: refs/heads/master@{#452045}

Former-commit-id: d4c7568248450ac03286a4af6fe46380b582ed68